--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "react-scripts": "^3.0.1",
+    "redux": "^4.0.4",
     "reselect": "^4.0.0"
   },
   "scripts": {
